--- a/fulbrinc-frontend/vue-3-authentication/package.json
+++ b/fulbrinc-frontend/vue-3-authentication/package.json
@@ -8,20 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vuelidate/core": "^2.0.0-alpha.43",
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.27.2",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^4.6.2",
     "core-js": "^3.8.3",
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
-    "vee-validate": "^4.5.8",
+    "url": "^0.11.0",
+    "vee-validate": "^4.7.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.16",
-    "vuex": "^4.0.2",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
