--- a/fulbrinc-frontend/vue-3-authentication/package.json
+++ b/fulbrinc-frontend/vue-3-authentication/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vee-validate/rules": "^4.8.3",
     "@vuelidate/core": "^2.0.0-alpha.43",
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.27.2",
