--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .vs/
 .vscode/
 /.vs/
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+/.idea
