--- a/back-end/.env.testing.example
+++ b/back-end/.env.testing.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=test
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -11,9 +11,13 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_test
 DB_USERNAME=root
 DB_PASSWORD=
+
+TEST_DB_DATABASE=laravel_test
+TEST_DB_USERNAME=root
+TEST_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
